Task-46669: Fix image position in news body
**problem**:  when change device the image is not responsive
**solution**: use vw and rem instead of percent and px to make image responsive when changing device

--- a/webapp/src/main/webapp/skin/less/news.less
+++ b/webapp/src/main/webapp/skin/less/news.less
@@ -175,13 +175,13 @@
     }
 
     img.pull-right {
-      margin-left: 15px ~'; /** orientation=lt */ ';
-      margin-right: 15px ~'; /** orientation=rt */ ';
+      margin-left: 1.5rem ~'; /** orientation=lt */ ';
+      margin-right: 1.5rem ~'; /** orientation=rt */ ';
     }
 
     img.pull-left {
-      margin-right: 15px ~'; /** orientation=lt */ ';
-      margin-left: 15px ~'; /** orientation=rt */ ';
+      margin-right: 1.5rem ~'; /** orientation=lt */ ';
+      margin-left: 1.5rem ~'; /** orientation=rt */ ';
     }
 
     .video {
@@ -369,12 +369,14 @@
       margin: auto;
       word-break: break-word;
       img.pull-right {
-        margin-left: 15px ~'; /** orientation=lt */ ';
-        margin-right: 15px ~'; /** orientation=rt */ ';
+        max-width: 50vw;
+        margin-left: 1.5rem ~'; /** orientation=lt */ ';
+        margin-right: 1.5rem ~'; /** orientation=rt */ ';
       }
       img.pull-left {
-        margin-right: 15px ~'; /** orientation=lt */ ';
-        margin-left: 15px ~'; /** orientation=rt */ ';
+        max-width: 50vw;
+        margin-right: 1.5rem ~'; /** orientation=lt */ ';
+        margin-left: 1.5rem ~'; /** orientation=rt */ ';
       }
       .video {
         position: relative;
